[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-graph-md"
version = "0.1.0"
description = "Infinite, structured memory for long-running autonomous agents"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
maintainers = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
keywords = [
    "memory",
    "graph",
    "knowledge",
    "agent",
    "long-term",
    "structured",
    "entities",
    "relationships",
    "retrieval",
    "memory-management",
    "semantic-search"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "networkx>=3.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/avasis-ai/memory-graph-md"
Documentation = "https://github.com/avasis-ai/memory-graph-md#readme"
Repository = "https://github.com/avasis-ai/memory-graph-md.git"
Issues = "https://github.com/avasis-ai/memory-graph-md/issues"

[project.scripts]
memory-graph = "memory_graph_md.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_graph_md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
